# walwal-front

./: .gitignore  agent_worker.py  main.py  pyproject.toml  render.yaml  run.sh
Aa_in/: README.md  aain.ipynb  server_test.ipynb
Byung-in/: README.md
Dae-hong/: README.md
Jong-ha/: README.md  example_bone.ipynb
backup_architecture/: README.md
front/: messages.json  user_input.json  vite.config.ts
front/src/: App.tsx
main_architecture/: README.md
