[project]
name = "dlthon-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lancedb<0.30.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "pandas>=3.0.1",
    "pypdf>=6.9.1",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
]
